--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "@types/express": "^4.17.7",
     "date-fns": "^2.15.0",
     "express": "^4.17.1",
+    "pg": "^8.3.3",
+    "typeorm": "^0.2.25",
     "uuidv4": "^6.2.3"
   },
   "devDependencies": {
