--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -23,6 +23,9 @@
         "class-methods-use-this" :"off",
         "no-console": "off",
         "camelcase":"off",
+        "@typescript-eslint/no-unused-vars" : ["error", {
+         "argsIgnorePattern" : "_"
+       }],
 	   	"import/extensions": [
 	      "error",
 	      "ignorePackages",
