--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -23,6 +23,7 @@
         "class-methods-use-this" :"off",
         "no-console": "off",
         "camelcase":"off",
+        "no-useless-constructor": "off",
         "@typescript-eslint/no-unused-vars" : ["error", {
          "argsIgnorePattern" : "_"
        }],
