--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,7 @@
      "rootDir": "./src",
     "strict": true,
      "strictPropertyInitialization": false,
-
+    "allowJs": true,
     "baseUrl": "./src",
     "paths": {
       "@modules/*":["modules/*"],
