--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,14 @@
 APP_SECRET =
 APP_WEB_URL = http://localhost:3000
 APP_API_URL = http://localhost:3333
+
+
+#AWS CREDENTIALS
+AWS_ACCESS_KEY_ID =
+AWS_SECRET_ACCESS_KEY =
+
+#STORAGE
+STORAGE_DRIVER = s3
+
+# MAIL
+MAIL_DRIVER = ethereal
