--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
     "handlebars": "^4.7.6",
+    "ioredis": "^4.19.4",
     "jsonwebtoken": "^8.5.1",
     "mime": "^2.5.0",
     "mongodb": "^3.6.3",
@@ -37,6 +38,7 @@
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
+    "@types/ioredis": "^4.19.1",
     "@types/jest": "^26.0.15",
     "@types/mongodb": "^3.6.3",
     "@types/nodemailer": "^6.4.0",
