--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/express": "^4.17.7",
     "@types/jsonwebtoken": "^8.5.0",
     "@types/multer": "^1.4.4",
+    "@types/redis": "^2.8.28",
     "aws-sdk": "^2.829.0",
     "bcryptjs": "^2.4.3",
     "celebrate": "^13.0.4",
@@ -32,6 +33,7 @@
     "nodemailer": "^6.4.16",
     "pg": "^8.3.3",
     "rate-limiter-flexible": "^2.2.1",
+    "redis": "^3.0.2",
     "reflect-metadata": "^0.1.13",
     "tsyringe": "^4.4.0",
     "typeorm": "^0.2.25",
